[gd_scene load_steps=8 format=3 uid="uid://cbvv7fth7ullu"]

[ext_resource type="Script" uid="uid://c73yra6x1xfvm" path="res://view_switcher/view_switcher.gd" id="1_ny4xg"]
[ext_resource type="Texture2D" uid="uid://cjxpc5lajqt57" path="res://inventory/assets/strzalka-alt-button.png" id="2_qkdpp"]
[ext_resource type="Texture2D" uid="uid://dv8iwr4v33ark" path="res://inventory/assets/strzalka-button.png" id="2_tmro5"]

[sub_resource type="Animation" id="Animation_58uee"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_qkdpp"]
resource_name = "fade_in"
length = 0.25
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_osyu2"]
resource_name = "fade_out"
length = 0.25
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_osyu2"]
_data = {
&"RESET": SubResource("Animation_58uee"),
&"fade_in": SubResource("Animation_qkdpp"),
&"fade_out": SubResource("Animation_osyu2")
}

[node name="ViewSwitcher" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_ny4xg")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -16.0
offset_right = 64.0
offset_bottom = 16.0
grow_vertical = 2
theme_override_constants/margin_left = 10

[node name="LeftButton" type="TextureButton" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
action_mode = 0
texture_normal = ExtResource("2_qkdpp")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -10.0
offset_bottom = 10.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_right = 10

[node name="RightButton" type="TextureButton" parent="MarginContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
action_mode = 0
texture_normal = ExtResource("2_qkdpp")
flip_h = true
flip_v = true

[node name="MarginContainer3" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -10.0
offset_right = 10.0
offset_bottom = 30.0
grow_horizontal = 2
theme_override_constants/margin_top = 10

[node name="UpButton" type="TextureButton" parent="MarginContainer3"]
unique_name_in_owner = true
layout_mode = 2
action_mode = 0
texture_normal = ExtResource("2_tmro5")

[node name="MarginContainer4" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -30.0
offset_right = 10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 10

[node name="DownButton" type="TextureButton" parent="MarginContainer4"]
unique_name_in_owner = true
visible = false
layout_mode = 2
action_mode = 0
texture_normal = ExtResource("2_tmro5")
flip_h = true
flip_v = true

[node name="ColorRect" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_osyu2")
}
